fix title line z-index:100 and fix burger position:fixed in right side

--- a/docs/index.css
+++ b/docs/index.css
@@ -5,6 +5,7 @@ header{
     padding:0px;
     position:fixed;top:0px;width:100%;height:45px; 
 	background-color: white;
+    z-index:100; /* 把抬頭固定的地方放在網頁最上層!*/
 }
 
 .blank{
@@ -31,6 +32,8 @@ a{
     height:31px;
     padding:5px;
     display:none;
+    position:fixed;top:0px;right:0px;
+    
 }
 .menu{
     background-color:#C4E1FF;
@@ -41,6 +44,7 @@ a{
     padding:0px;
     transform: translateX(-100%);
     transition:0.5s;
+    
 }
 
 .menu li a{
@@ -103,7 +107,7 @@ main{
 
 }
 
-img{
+main img{
     max-width:100%;
     /* height:auto; */
     /*height:202.8px;*/ /*202.8px*/
@@ -127,8 +131,6 @@ h4{
     background-color:#C4E1FF;
     margin:0px;height:40px;
     text-align: center;
-    /* line-height: 1.5; */
-
 }
 
 @media (max-width:1200px){
